--- a/main.html
+++ b/main.html
@@ -23,10 +23,10 @@ Accompanying this tool is additional information on factors affecting the variou
 <ul>    
 	<li><a onclick='lnk(event,"goal")' href=''>Ultimate Goal</a></li>
     <li><a onclick='lnk(event,"mvr")' href=''>Measured vs Required Conditions</a></li>
-	<li>Sources of System Losses</li>
+	<li><a onclick='lnk(event,"losses")' href=''>System Losses</a></li>	
     <li style='margin-bottom:1rem;'><a onclick='lnk(event,"help")' href=''>Help</a></li>
-    <li>Pump Efficiency Curves</li>
-    <li>Motor Performance Curves</li>	
+    <li><a onclick='lnk(event,"pump_eff")' href=''>Pump Efficiency Curves</a></li>
+	<li><a onclick='lnk(event,"motor_perf")' href=''>Motor Performance Curves</a></li>    
 </ul>
 <button onclick='go("conditions")'>BEGIN ANALYSIS</button>
 <script>
