--- a/motor_perf.html
+++ b/motor_perf.html
@@ -2,11 +2,16 @@
 <style scoped>
 	canvas {
 		background-color: black;
+		margin-top: 1rem;
 	}
 }
 </style>
 <div>
 	<h1>Motor Performance</h1>
+	Line Frequency
+	<label><input type=radio> 60</label>
+	<label><input type=radio> 50</label>
+	
 	<canvas width="700" height="500"></canvas>
 	
 </div>
