--- a/grid.html
+++ b/grid.html
@@ -93,7 +93,7 @@
   <tr>
     <td class='th'>Motor</td><td/>
   </tr>
-    <td><div>Line Freq <em>(Hz)</em></div></td>
+    <td><div>Line Frequency <em>(Hz)</em></div></td>
     <td> 
       <select name='line'>
         <option>50</option>
