--- a/index.html
+++ b/index.html
@@ -302,6 +302,15 @@
           Conds = [];
           HeadTool = {Ds:14,Dd:10,Ps:5,Pd:124,Ks:1,Kd:1};  
           Curve = {C:1.9,plot:["","","",""]};
+          MotorPerf = {
+            line: 60,
+            units: 'hp',
+            speed: 1780,
+            efficiency_class: 'Standard',
+            efficiency: 75,
+            voltage: 460,
+            flc: 225.4
+          };
           save();        
         }
         Conds = loadProp('conditions');
