--- a/motor_perf.html
+++ b/motor_perf.html
@@ -116,7 +116,8 @@
 			nm('efficiency').hide();
 		}
 	}
-	nm('efficiency_class').change();	
+	setCtls(MotorPerf);
+	//nm('efficiency_class').change();	
 	
 </script>
 
