--- a/goal.html
+++ b/goal.html
@@ -1,6 +1,6 @@
 <style scoped>
 </style>
-<h1>The Ultimate Goal</h1>
+<h1>Ultimate Goal</h1>
 <p>
 The foremost opportunity for efficiency improvement in most fluid systems is in what we call the <strong>ultimate goal</strong>.
 </p>
