--- a/main.html
+++ b/main.html
@@ -10,10 +10,10 @@ The Pumping System Assessment Tool was developed by the Department of Energy's B
     <li><a onclick='lnk(event,"help")' href=''>Help</a></li>
 	<li><a onclick='lnk(event,"about")' href=''>About</a></li>
 	<li><a onclick='lnk(event,"goal")' href=''>Ultimate Goal</a></li>
-    <li><a onclick='lnk(event,"mvr")' href=''>Measured vs Required Conditions</a></li>
-	<li><a onclick='lnk(event,"losses")' href=''>System Losses</a></li>	
-	<a onclick='lnk(event,"pump_eff")' href=''>Pump Efficiency Curves</a><br>
-	<a onclick='lnk(event,"motor_perf")' href=''>Motor Performance Curves</a><br>
+    <li><a onclick='lnk(event,"mvr")' href=''>Measured vs Required</a></li>
+	<li style='margin-bottom:1rem'><a onclick='lnk(event,"losses")' href=''>System Losses</a></li>	
+	<a onclick='lnk(event,"pump_eff")' href=''>Pump Efficiency</a><br>
+	<a onclick='lnk(event,"motor_perf")' href=''>Motor Performance</a><br>
 	<a onclick='lnk(event,"units")' href=''>Units</a><br>
 	<a onclick='lnk(event,"conditions")' href=''>Pump Conditions</a>
 </ul>
