--- a/index.html
+++ b/index.html
@@ -91,7 +91,8 @@
       <span style='padding-left:1rem;text-align:right'>Pumping System Assessment Tool</span>
     </div>
     <button id=back onclick='back()'><i class="fa fa-long-arrow-left fa-lg"></i></button>
-    
+    <button id=home onclick='main()'><i class="fa fa-home fa-lg"></i></button>
+
     <div id=container></div>
     <script>
       function rnd(v,p=2) {
@@ -236,10 +237,16 @@
       }
      function loadPg() {
         pg().load(Nav[Nav.length-1]+'.html',function () {
-          if (Nav.length>1 ) {
-            $('#back').show();            
+          if (Nav.length>1) {
+            $('#back').show();
+            if (Nav.length>2) {
+              $('#home').show();
+            } else {
+              $('#home').hide();
+            }          
           } else {
             $('#back').hide();
+            $('#home').hide();            
           }
         });       
      }
