--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
             case 'select-one':
               ctl.find('option')[v].selected = true;
               break;
-            case 'radio'://debugger;
+            case 'radio':
               chk(ctl,ctl.parent().text().trim()==v);
               break;
             default:
