--- a/main.html
+++ b/main.html
@@ -61,7 +61,7 @@ The Pumping System Assessment Tool was developed by the Department of Energy's B
 						lines=fs.readFileSync(fn[0],'utf8').split('\n'),
 						hd=lines[1].split('\t').filter(e => e > 'Z' );
 					Conds=[];
-					[,Units,HeadTool,Curve]=JSON.parse(lines[0]);					
+					[,DefCond,Units,HeadTool,Curve,MotorPerf]=JSON.parse(lines[0]);					
 					lines.slice(2).forEach((ln,row)=>{
 						Conds.push({});
 						ln.split('\t').slice(0,hd.length).forEach((v,i)=>{
@@ -83,7 +83,7 @@ The Pumping System Assessment Tool was developed by the Department of Energy's B
 						const r = crunch(cvtArg(c));						
 						if (i==0) {
 							hd = Object.keys(Conds[0]).sort().concat(Object.keys(r).sort());
-							lines=[JSON.stringify([0,Units,HeadTool,Curve]),hd.join('\t')];
+							lines=[JSON.stringify([0,DefCond,Units,HeadTool,Curve,MotorPerf]),hd.join('\t')];
 						}
 						let o = $.extend(crunch(cvtArg(c)),c);
 						lines.push(
