--- a/motor_perf.html
+++ b/motor_perf.html
@@ -22,7 +22,7 @@
 </style>
 <h1>Motor Performance</h1>
 <div style='display:flex; justify-content: space-between;'>
-	<div>
+	<div style='white-space: nowrap'>
 		Line Frequency <em>(Hz)</em>
 		<label><input name=line type=radio value=0> 50</label>
 		<label class=vsp><input name=line type=radio value=1> 60</label>
