--- a/curve.html
+++ b/curve.html
@@ -49,7 +49,7 @@
 			<td><input></td>			
 		</tr>
 	</table>
-	System loss exponent<br>
+	Loss exponent<br>
 	<input id=C size=10><br>	
 	<button class='prime' onclick='plot()'>PLOT</button><br>
 	<div id=plot>
